ajout profil github et publication projet OPaddock

--- a/about.html
+++ b/about.html
@@ -22,7 +22,8 @@
             </div>
         </nav>
         <div class="header_social-links">
-            <a href="https://www.linkedin.com/in/thomas-iannicca/"><img src="./images/linkedin-logo.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/thomas-iannicca/"><img src="./images/linkedin-logo.png" alt="Logo Linkedin"></a>
+            <a href="https://github.com/ThomasIANNICCA"><img src="./images/logo-github.png" alt="Logo GitHub"></a>
         </div>
         <div class="burger-menu">
             <img class ="burger-menu__img"src="./images/menu.png" alt="">
