--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,8 @@
             </div>
         </nav>
         <div class="header_social-links">
-            <a href="https://www.linkedin.com/in/thomas-iannicca/"><img src="./images/linkedin-logo.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/thomas-iannicca/"><img src="./images/linkedin-logo.png" alt="Logo Linkedin"></a>
+            <a href="https://github.com/ThomasIANNICCA"><img src="./images/logo-github.png" alt="Logo GitHub"></a>
         </div>
         <div class="burger-menu">
             <img class ="burger-menu__img"src="./images/menu.png" alt="">
