--- a/project-detail-2.html
+++ b/project-detail-2.html
@@ -20,7 +20,8 @@
             </div>
         </nav>
         <div class="header_social-links">
-            <a href="https://www.linkedin.com/in/thomas-iannicca/"><img src="./images/linkedin-logo.png" alt=""></a>
+            <a href="https://www.linkedin.com/in/thomas-iannicca/"><img src="./images/linkedin-logo.png" alt="Logo Linkedin"></a>
+            <a href="https://github.com/ThomasIANNICCA"><img src="./images/logo-github.png" alt="Logo GitHub"></a>
         </div>
         <div class="burger-menu">
             <img class ="burger-menu__img"src="./images/menu.png" alt="">
@@ -35,19 +36,18 @@
         
         <div class="project-section__article">
 
-            <a href="#">
+            <a href="https://github.com/ThomasIANNICCA/o-paddock">
                 <div class="project-section__article__image">
-                    <img src="./images/formula-one.png" alt="Image du projet My O'clock List">
+                    <img src="./images/formula-one.png" alt="Image du projet O'Paddock">
                 </div>
             </a>
 
             <div class="project-section__article__text">
                 <h2>Présentation</h2>
                 <p>En parallèle de ma formation, j'ai décidé de créer un projet de site personnel afin de mettre en pratique les notions abordées. Ayant un attrait pour la Formule 1, j'ai souhaité créer un projet mettant en avant ce sport. Je me suis donc fixé pour objectif de créer une première section présentant les équipes. Chaque équipe possède sa propre page et les informations y sont affichées dynamiquement via une base de données. J'ai également fait le choix de créer une section dédiée aux résultats de la saison 2023 ainsi qu'une autre contenant un calendrier qui répertorie toutes les dates des Grands Prix sur l'année. De quoi commencer la saison 2024 sans être dépassé par les évènements ;)</p>
-                <p><strong>Projet indisponible pour le moment (en cours de construction)</strong></p>
                 <p>HTML CSS JS PHP (Architecture MVC) MySQL</p>
                 <div class="article-nav">
-                    <a href="#">Voir le projet</a>
+                    <a href="https://github.com/ThomasIANNICCA/o-paddock">Voir le projet</a>
                     <a href="./projects.html">Retour</a>
                 </div>
             </div>
