--- a/project-detail-3.html
+++ b/project-detail-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/global.css">
-    <link rel="stylesheet" href="./css/projects.css">
+    <link rel="stylesheet" href="./css/project-detail.css">
     <title>Portfolio</title>
 </head>
 <body>
@@ -29,30 +29,32 @@
     </header>
 
     <section class="project-section">
+
         <div class="project-section__title">
-            <h1>Projets<span class="blue-color">.</span></h1>
+            <h1>Le Burger Lillois<span class="blue-color">.</span></h1>
         </div>
+        
+        <div class="project-section__article">
 
-        <div class="project-section__container">
-            <a href="./project-detail.html">
-                <div class="project-section__article">
-                    <img src="./images/my-oclock-list.png" alt="Image du projet My Oclock List">
-                </div>
-            </a>
-
-            <a href="./project-detail-2.html">
-                <div class="project-section__article">
-                    <img src="./images/formula-one.png" alt="Image du projet My Oclock List">
-                </div>
-            </a>
-
-            <a href="./project-detail-3.html">
-                <div class="project-section__article">
+            <a href="https://github.com/ThomasIANNICCA/le-burger-lillois">
+                <div class="project-section__article__image">
                     <img src="./images/burger-lillois.jpeg" alt="Image du projet Burger Lillois">
                 </div>
             </a>
+
+            <div class="project-section__article__text">
+                <h2>Présentation</h2>
+                <p>Le Burger Lillois est un site qui propose de découvrir les meilleures adresses de burgers de Lille. L'utilisateur peut sélectionner un quartier (Vieux-Lille, Lille-Centre, Lille-Sud) et découvrir les différents restaurants. Afin d'affiner son choix, il peut également filtrer sur les notes. Ce projet a été réalisé dans le but de travailler la construction d'une API, la définition des routes et les appels pour retourner les résultats.</p>
+                <p>HTML CSS JS Laravel API Rest</p>
+                <div class="article-nav">
+                    <a href="https://github.com/ThomasIANNICCA/le-burger-lillois">Voir le projet</a>
+                    <a href="./projects.html">Retour</a>
+                </div>
+            </div>
+
         </div>
+        <script src="script.js"></script>
+
     </section>
-    <script src="script.js"></script>
 </body>
 </html>
