--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                 <div class="presentation__description">
                     <h3>Je m'appelle <span class="blue-color">Thomas.</span></h3> 
                     <p>Après quelques années d'expérience dans le <span class="blue-color">E-commerce</span> en tant qu'E-merchandiser, chargé de Marketplace et <span class="blue-color">Proxy Product Owner Search</span> où j'ai pu découvrir la <span class="blue-color">gestion de projet agile</span>, j'ai décidé de diversifier mes compétences en apprenant le <span class="blue-color">développement web</span>.</p>
-                    <p>Afin d'apprendre davantage le métier dans un contexte professionnel, je suis à la recherche d'une <span class="blue-color">alternance pour Septembre 2024</span>, en tant que <span class="blue-color">développeur web.</span></p>    
+                    <p>Afin d'apprendre davantage le métier dans un contexte professionnel, je suis à la recherche d'un <span class="blue-color">poste pour Septembre 2024</span>, en tant que <span class="blue-color">développeur web.</span></p>    
                 </div>
             </div>
 
@@ -92,9 +92,9 @@
                             <ul>
                                 <li>HTML</li>
                                 <li>CSS</li>
-                                <li>Javascript</li>
                                 <li>Intégration responsive</li>
-                                <li>Spécialisation React à venir (formation O'clock)</li>
+                                <li>Javascript</li>
+                                <li>React</li>
                             </ul>
                         </div>
                     </article>
@@ -130,7 +130,7 @@
                     
                     <article>
                         <div class="skills-title">
-                            <h3>Autres <span class="blue-color">.</span></h3>
+                            <h3>Autres<span class="blue-color">.</span></h3>
                         </div>
                         <div class="skills-description">
                             <ul>
