--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="presentation_content_title">
                 <h1>Bonjour <img src="./images/emoji-hello.png" alt=""></h1>
                 <h2>Moi c'est <span class="blue-color">Thomas.</span></h2>
-                <p>Développeur <span class="blue-color">web</span> à la recherche d'une alternance pour <span class="blue-color">Septembre 2024</span>.</p>
+                <p>Développeur <span class="blue-color">web</span> à la recherche d'un poste pour <span class="blue-color">Septembre 2024</span>.</p>
                 <div class="presentation_content_nav">
                     <a href="./projects.html"><button class="blue-color">Voir les projets</button></a>
                     <a href="./about.html"><button class="blue-color">A propos</button></a>
