ajout projet toqués

--- a/project-detail-4.html
+++ b/project-detail-4.html
@@ -31,23 +31,24 @@
     <section class="project-section">
 
         <div class="project-section__title">
-            <h1>Github Search Engine<span class="blue-color">.</span></h1>
+            <h1>La Tournée des Toqués<span class="blue-color">.</span></h1>
         </div>
         
         <div class="project-section__article">
 
-            <a href="https://github.com/ThomasIANNICCA/github-repo-search-engine">
+            <a href="https://github.com/ThomasIANNICCA/la-tournee-des-toques">
                 <div class="project-section__article__image">
-                    <img src="./images/github-search-engine.jpeg" alt="Image du projet Moteur de recherche Github">
+                    <img src="./images/toques.jpg" alt="Image du projet Moteur de recherche Github">
                 </div>
             </a>
 
             <div class="project-section__article__text">
                 <h2>Présentation</h2>
-                <p>Ce projet est un moteur de recherche permettant de trouver des repositories GitHub en fonction du langage recherché. Les repositories sont générés grâce à des appels vers l'API Github. Le projet propose également une FAQ expliquant son fonctionnement.</p>
-                <p>React SASS Axios Semantic UI</p>
+                <p>Ce projet relaie un évenement fictif : un festival de Food Trucks. Réalisé en groupe en fin de formation, ce site permet aux visiteurs d'obtenir des informations sur l'évènement et de poser des questions (accès, horaires, formulaire de contact) ainsi que de consulter la liste des food trucks présents sur l'évènement ainsi que leur carte. Les propriétaires de food trucks ont également un espace client dédié permettant de modifier leur profil et leurs plats. Enfin, un espace admin a également été réalisé pour la modération.  </p>
+                <p>React, Symfony</p>
                 <div class="article-nav">
-                    <a href="https://github.com/ThomasIANNICCA/github-repo-search-engine">Voir le projet</a>
+                    <a href="https://github.com/ThomasIANNICCA/la-tournee-des-toques">Voir le projet front</a>
+                    <a href="https://github.com/ThomasIANNICCA/la-tournee-des-toques-back">Voir le projet back</a>
                     <a href="./projects.html">Retour</a>
                 </div>
             </div>
