--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,13 @@
         </div>
 
         <div class="project-section__container">
+
+            <a href="./project-detail-4.html">
+                <div class="project-section__article">
+                    <img src="./images/toques.jpg" alt="Image du projet Festival de Food Trucks">
+                </div>
+            </a>
+            
             <a href="./project-detail.html">
                 <div class="project-section__article">
                     <img src="./images/my-oclock-list.png" alt="Image du projet My Oclock List">
@@ -52,11 +59,8 @@
                 </div>
             </a>
 
-            <a href="./project-detail-4.html">
-                <div class="project-section__article">
-                    <img src="./images/github-search-engine.jpeg" alt="Image du projet Moteur de recherche Github">
-                </div>
-            </a>
+            
+
         </div>
     </section>
     <script src="script.js"></script>
