ajout expérience dev

--- a/about.html
+++ b/about.html
@@ -155,6 +155,19 @@
 
                     <article>
                         <div class="article-item__title">
+                            <h3>Développeur <span class="blue-color">front-end</span></h3>
+                            <p class="blue-color">O'clock</p>
+                            <p>2024</p>
+                        </div>
+
+                        <div class="article-item__description">
+                            <p>
+                                Projet de fin de formation en groupe (2 développeurs front, 1 développeur back). <span class="blue-color">Développement front-end</span> d’un site dédié à l’organisation d’un festival de Food trucks <span class="blue-color">(React/Symfony)</span>. Conception, maquettage, rédaction des user stories et <span class="blue-color">développement de composants.</span></p>
+                        </div>
+                    </article>
+
+                    <article>
+                        <div class="article-item__title">
                             <h3>E-<span class="blue-color">Merchandiser</span></h3>
                             <p class="blue-color">Top Office</p>
                             <p>2022-2023</p>
