modif description Toqués

--- a/project-detail-4.html
+++ b/project-detail-4.html
@@ -44,7 +44,7 @@
 
             <div class="project-section__article__text">
                 <h2>Présentation</h2>
-                <p>Ce projet relaie un évenement fictif : un festival de Food Trucks. Réalisé en groupe en fin de formation, ce site permet aux visiteurs d'obtenir des informations sur l'évènement et de poser des questions (accès, horaires, formulaire de contact) ainsi que de consulter la liste des food trucks présents sur l'évènement ainsi que leur carte. Les propriétaires de food trucks ont également un espace client dédié permettant de modifier leur profil et leurs plats. Enfin, un espace admin a également été réalisé pour la modération.  </p>
+                <p>Ce projet relaie un évenement fictif : un festival de Food Trucks. Réalisé en groupe en fin de formation, ce site permet aux visiteurs d'obtenir des informations sur l'évènement et de poser des questions (accès, horaires, formulaire de contact), de consulter la liste des food trucks présents sur l'évènement ainsi que leur carte. Les propriétaires de food trucks ont également un espace client dédié leur permettant de modifier leur profil et leurs plats. Enfin, un espace admin a également été réalisé pour la modération.  </p>
                 <p>React, Symfony</p>
                 <div class="article-nav">
                     <a href="https://github.com/ThomasIANNICCA/la-tournee-des-toques">Voir le projet front</a>
